--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+=======
 /nbproject/private/
 /nbproject/private/
+application/config/db.php
